# Portal

./: .gitignore  CMakeLists.txt  PortalMath.h  PortalRenderer.h  PortalTeleporter.h  README.md  main_example.cpp
shaders/: portal.frag  portal.vert
